test/test_units/test_kclvm/test_types/invalid_test_data/if/if_0.k
a: int = 1 if True else "2"
